syntax = "proto3";

package todo;
option go_package="todopb";

message Todo {
	string text = 1;
}

message CreateTodoRequest {
	Todo todo = 1;
}

message CreateTodoResponse {
	bool status = 1;
	Todo todo = 2;
}

message GetTodoRequest {
	Todo todo = 1;
}

message GetTodoResponse {
	Todo todo = 1;
}

service TodoService {
	// unary
	rpc Create(CreateTodoRequest) returns (CreateTodoResponse) {};

	// server streaming
	rpc GetAll(GetTodoRequest) returns (stream GetTodoResponse) {};
}